--- a/react_sample01-05-redux/package.json
+++ b/react_sample01-05-redux/package.json
@@ -10,23 +10,30 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
-    "react": "^16.2.0", // reactを使うのに必要
-    "react-dom": "^16.2.0" // reactを使うのに必要
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "babel": "^6.23.0", // ES6で書くためのもの
-    "babel-core": "^6.26.0", // ES6で書くためのもの
-    "babel-loader": "7.1.1", // ES6で書くためのもの
-    "babel-preset-es2015": "^6.24.1", // ES6で書くためのもの
-    "babel-preset-react": "^6.24.1", // reactでES6で書くためのもの
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "browser-sync": "^2.18.13",
     "browserify": "^14.5.0",
-    "gulp": "^3.9.1", // タスクランナー
-    "gulp-notify": "^3.0.0", // gulpタスクがエラーになった時に通知してくれる
-    "gulp-plumber": "^1.1.0", // gulpタスクがエラーになっても止まらずに実行してくれる
-    "gulp-webpack": "^1.5.0", // webpackをgulpで使う
+    "gulp": "^3.9.1",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-webpack": "^1.5.0",
+    "run-sequence": "^2.2.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^3.9.1",
     "webpack-stream": "^4.0.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
