--- a/react_sample01-05-redux/package.json
+++ b/react_sample01-05-redux/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
@@ -19,14 +20,13 @@
     "babel-loader": "7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babelify": "^8.0.0",
     "browser-sync": "^2.18.13",
     "browserify": "^14.5.0",
+    "classnames": "^2.2.5",
     "gulp": "^3.9.1",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-webpack": "^1.5.0",
-    "run-sequence": "^2.2.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^3.9.1",
     "webpack-stream": "^4.0.0"
