--- a/react_sample01-05-redux/package.json
+++ b/react_sample01-05-redux/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "browser-sync": "^2.18.13",
     "browserify": "^14.5.0",
     "classnames": "^2.2.5",
