--- a/react_sample01-05-redux/package.json
+++ b/react_sample01-05-redux/package.json
@@ -12,7 +12,9 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -24,10 +26,15 @@
     "browser-sync": "^2.18.13",
     "browserify": "^14.5.0",
     "classnames": "^2.2.5",
+    "eslint": "^4.12.1",
+    "eslint-plugin-react": "^7.5.1",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^4.0.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-webpack": "^1.5.0",
+    "prop-types": "^15.6.0",
+    "redux-devtools": "^3.4.1",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^3.9.1",
     "webpack-stream": "^4.0.0"
